<resources>
    <string name="app_name">UsuarioCocina</string>
    <string name="app_title">RestaurantOS</string>
    <string name="module_title">Módulo de Cocina</string>
    <string name="sub_module_title">Kitchen Display System</string>
    <string name="footer_text">Acceso restringido a red local\nSolo personal autorizado</string>
    <string name="welcome">Bienvenido</string>
    <string name="login_subtitle">Inicia sesión para continuar</string>
    <string name="label_user">Correo o usuario</string>
    <string name="label_pass">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="dialog_forgot_title">Código de recuperación enviado al administrador</string>
    <string name="dialog_forgot_subtitle">Ingrésalo para poder acceder.</string>
    <string name="label_code">Código:</string>
    <string name="button_verify">Verificar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="dialog_success_title">¡Codigo verificado!</string>
    <string name="dialog_success_subtitle">Sesión Iniciada</string>
    <string name="button_continue">Continuar</string>
    <string name="welcome_chef">¡Bienvenido chef!</string>
    <string name="chef_name">Chef Fernando</string>
    <string name="tab_orders">Pedidos</string>
    <string name="table_label">Mesa %1$d</string>
    <string name="status_pending">PENDIENTE</string>
    <string name="status_preparing">EN PREPARACIÓN</string>
    <string name="status_ready">LISTO</string>
    <string name="order_detail_title">Mesa %1$d — Detalle del pedido</string>
    <string name="waiter_label">Mesero: %1$s</string>
    <string name="order_products_title">Productos del pedido</string>
    <string name="order_general_note_title">Nota general del pedido</string>
    <string name="new_order_title">¡Nuevo pedido!</string>
    <string name="table_waiter_format">Mesa %1$d · Mesero %2$s</string>
    <string name="button_accept">Aceptar</string>
    <string name="button_see_later">Ver después</string>
    <string name="button_login">Ingresar</string>
    <string name="security_icon_desc">Icono de seguridad</string>
    <string name="logout_desc">Cerrar sesión</string>
    <string name="logout_confirm_title">Cerrar sesión</string>
    <string name="logout_confirm_msg">¿Estás seguro de que deseas salir del sistema?</string>
    <string name="logout_btn_confirm">Salir</string>
</resources>